kubernetesTemplate/vscode/vscode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode
  namespace: vscode
spec:
  selector:
    app: vscode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
