kubernetesTemplate/vscode/vscode-ingress.yaml
# vscode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-ingress
  namespace: vscode
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vscode.vladsdomain.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vscode
            port:
              number: 80
